# writing_an_os_in_rust

./: Cargo.toml  glossaire.md  x86_64-rust_os.json
.github/workflows/: rust.yml
src/: interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
